--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
 
   <title>7urtle Programming</title>
   <!-- styles/vendor.css" and styles/app.css" are injected here by webpack -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
 </head>
 
 <body>
